@@ -250,7 +250,7 @@
                             </child>
                             <child>
                               <object class="GtkRadioButton" id="p1-dnd-detach">
-                                <property name="label" translatable="yes">Let me _detach the main tabs</property>
+                                <property name="label" translatable="yes">Let me _detach and reattach the main tabs by DnD</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">False</property>
@@ -261,7 +261,7 @@
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
-                                <property name="top_attach">1</property>
+                                <property name="top_attach">2</property>
                               </packing>
                             </child>
                             <child>
@@ -269,13 +269,29 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="margin_left">20</property>
-                                <property name="label" translatable="yes">&lt;i&gt;Please note that changing this behavior requires restarting Openbook.&lt;/i&gt;</property>
+                                <property name="margin_top">8</property>
+                                <property name="margin_bottom">6</property>
+                                <property name="label" translatable="yes">&lt;i&gt;Please note that changing any of the above behaviors requires restarting the application.&lt;/i&gt;</property>
                                 <property name="use_markup">True</property>
                                 <property name="xalign">0</property>
                               </object>
                               <packing>
                                 <property name="left_attach">0</property>
-                                <property name="top_attach">2</property>
+                                <property name="top_attach">3</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="p1-pin-detach">
+                                <property name="label" translatable="yes">Have a pin button to detach the tabs</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="margin_left">20</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">1</property>
                               </packing>
                             </child>
                           </object>
