@@ -28,6 +28,7 @@
    - Improve error messages when entering an operation (todo #1356).
    - Display conciliation group from an entry or a BAT line (todo #1372).
    - Review the window geometry management (todo #1285).
+   - Let the user have a pin button to detach main tabs.
 
  Bug fixes:
 
@@ -53,6 +54,7 @@
    - ofa_itvcolumnable_enable_column(): renamed to ofa_itvcolumnable_set_invisible().
    - ofa_itvcolumnable_get_column_type(): new function.
    - ofa_itvcolumnable_get_menu_label(): new function.
+   - ofa_prefs_pin_detach(): new function.
    - ofaReconcilGroup: new class.
    - ofo_entry_get_abr_from_status(): new function.
    - Periodicity properties: review UI margins (todo #1366).
